apps/site/web/static/css/_mode-group.scss
.mode-button-group {
  margin-bottom: $base-spacing / 2;
  margin-top: $base-spacing / -2;
  padding: $grid-gutter-width / 2 1px;

  &:first-child {
    padding-top: 0;
  }

  h1,
  h2 {
    font-weight: bold;
    margin-bottom: $grid-gutter-width / 2;
  }

  .mode-group-block {
    margin-top: $grid-gutter-width / 2;
  }

  &.truncated {
    @include media-breakpoint-up(xs) {
      .button-container:last-child {
        width: 66.6%;
      }
    }

    @include media-breakpoint-up(md) {
      .button-container:last-child {
        width: 33.3%;
      }
    }
  }
}

.mode-group-btn {
  //scss-lint:disable PlaceholderInExtend
  @extend .btn;
  @include button-variant($link-color, white, $gray-lightest);
  @extend .btn-block;
  @extend %button-focus-color;

  margin-bottom: $grid-gutter-width / 4;
  margin-top: $grid-gutter-width / 4;
  padding-bottom: $base-spacing-sm;
  padding-top: $base-spacing-sm;

  @include media-breakpoint-down(sm) {
    // small button
    @include button-size($btn-padding-y, $btn-padding-x, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
  }

  > .icon-alert {
    margin-left: .375rem;
  }
}

@include media-breakpoint-down(xs) {
  // for commuter rail on homepage for mobile, special rules to guarantee nice two column formatting
  .mode-group.commuter-rail .button {
    align-items: center;
    display: flex;
    height: 4rem;
    justify-content: center;
    white-space: normal;
  }
}

